# cmpt373_combatgame

./: CMakeLists.txt  README.md
data/: commands.yml  mgoose.yml  midgaard.yml  newgate.yml  spells.yml  strings.yml
data/assets/fontsets/dark/: b.txt  e.txt  f.txt  h.txt  k.txt  l.txt  m.txt  o.txt  p.txt  s.txt  u.txt  x.txt
data/assets/fontsets/default/: a.txt  b.txt  d.txt  f.txt  g.txt  k.txt  l.txt  m.txt  p.txt  u.txt  v.txt  x.txt
include/: GameStrings.hpp  PigLatinTranslator.hpp  StringResourceImporter.hpp  StringUtils.hpp
include/ascii-converter/: AsciiConverter.hpp
include/expr-evaluator/: ExprEvaluator.hpp
include/game/: Area.hpp  Attributes.hpp  Character.hpp  GameDataImporter.hpp  GameModel.hpp  NPCScripts.hpp  Object.hpp  Spell.hpp  StatusEffect.hpp
include/game/protocols/: Authentication.hpp  CombatInfo.hpp  CommandInfo.hpp  DisplayMessage.hpp  Editing.hpp  PlayerCommand.hpp  RequestMessage.hpp  ResponseMessage.hpp
include/networking/: client.h  server.h
lib/: CMakeLists.txt
lib/ascii-converter/: AsciiConverter.cpp  CMakeLists.txt
lib/ascii-converter/assets/fontsets/dark/: a.txt  c.txt  d.txt  i.txt  j.txt  n.txt  q.txt  r.txt  t.txt  v.txt  w.txt  y.txt  z.txt
lib/ascii-converter/assets/fontsets/default/: c.txt  e.txt  h.txt  i.txt  j.txt  n.txt  o.txt  q.txt  r.txt  s.txt  t.txt  w.txt  y.txt  z.txt
lib/expr-evaluator/: CMakeLists.txt  ExprEvaluator.cpp
lib/glog/: CMakeLists.txt
lib/glog/src/: utilities.cc
lib/networking/: CMakeLists.txt  client.cpp  server.cpp  transferMessage.h
lib/parsing/: parser.cpp  parser.h
lib/yaml-cpp/: CMakeLists.txt
src/: CMakeLists.txt
src/game-client/: Application.cpp  Application.hpp  ArtWindow.cpp  ArtWindow.hpp  AuthenticationWindow.cpp  AuthenticationWindow.hpp  CMakeLists.txt  CharacterAsciis.hpp  ChatWindow.cpp  ChatWindow.hpp  CombatWindow.cpp  CombatWindow.hpp  GameClient.cpp  MainMenuWindow.cpp  MainMenuWindow.hpp  StartupSplashScr.cpp  StartupSplashScr.hpp  StrColorizer.cpp  StrColorizer.hpp  Window.hpp  WorldBuildingWindow.cpp  WorldBuildingWindow.hpp
src/game-model/: Area.cpp  Attributes.cpp  CMakeLists.txt  Character.cpp  ExpressionExtractor.hpp  GameDataImporter.cpp  GameModel.cpp  Inventory.cpp  Inventory.hpp  Makefile  NPCScripts.cpp  Object.cpp  Resets.cpp  Resets.hpp  Spell.cpp  StatusEffect.cpp  YmlSerializer.cpp  YmlSerializer.hpp
src/game-model/combat/: CharacterInstance.cpp  CharacterInstance.hpp  CombatAction.cpp  CombatAction.hpp  CombatInstance.cpp  CombatInstance.hpp  CombatManager.cpp  CombatManager.hpp
src/game-model/protocols/: Authentication.cpp  CMakeLists.txt  CombatInfo.cpp  CommandInfo.cpp  DisplayMessage.cpp  Editing.cpp  MessageSerializer.hpp  PlayerCommand.cpp  RequestMessage.cpp  ResponseMessage.cpp
src/game-server/: AccountInfo.hpp  Authenticator.cpp  Authenticator.hpp  CMakeLists.txt  CommandInfoRequestHandler.cpp  CommandInfoRequestHandler.hpp  ConnectionManager.hpp  Controller.cpp  Controller.hpp  GameFunctions.cpp  GameFunctions.hpp  GameServer.cpp  HelpCommand.cpp  HelpCommand.hpp  Looper.cpp  Looper.hpp  MessageIO.hpp  PigLatinDecorator.cpp  PigLatinDecorator.hpp  PlayerRole.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerLoop.cpp  ServerLoop.hpp  StringResourceImporter.cpp  config.yml
src/game-server/commands/: CombatMessageBuilder.cpp  CombatMessageBuilder.hpp  Command.hpp  CommandConfig.cpp  CommandConfig.hpp  CommandHandle.cpp  CommandHandle.hpp  CommandList.hpp  DisplayMessageBuilder.cpp  DisplayMessageBuilder.hpp  EditMessageBuilder.cpp  EditMessageBuilder.hpp  MessageBuilder.hpp
src/game-server/commands/game-commands/: AttackCommand.cpp  AttackCommand.hpp  CastCommand.cpp  CastCommand.hpp  EditCommand.cpp  EditCommand.hpp  GameCommands.hpp  KickCommand.cpp  KickCommand.hpp  ListExitsCommand.cpp  ListExitsCommand.hpp  ListPlayersCommand.cpp  ListPlayersCommand.hpp  LookCommand.cpp  LookCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  SayCommand.cpp  SayCommand.hpp  ShoutCommand.cpp  ShoutCommand.hpp  StatusCommand.cpp  StatusCommand.hpp  WhisperCommand.cpp  WhisperCommand.hpp
tests/: CMakeLists.txt  CombatTests.cpp  CommandConfigTests.cpp  ExpressionExtractorTests.cpp  NPCScriptingTest.cpp  PigLatinTranslatorTests.cpp  ProtocolTests.cpp  SpellImportingTest.cpp  dummy.cpp
tests/lib/: CMakeLists.txt
